Added FecEnabled and oidcSessionTTL functionality
